[tool.poetry]
name = "counter-ai"
version = "0.1.0"
description = ""
authors = ["Carson Weeks <mail@carsonweeks.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.26.0"}


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"