[tool.poetry]
name = "counter-ai"
version = "0.1.0"
description = ""
authors = ["Carson Weeks <mail@carsonweeks.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.26.0"}
python-multipart = "^0.0.6"
boto3 = "^1.34.23"
boto3-stubs = {extras = ["kms", "sagemaker-runtime"], version = "^1.34.26"}
pydantic-settings = "^2.1.0"
pynamodb = "^6.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"